# VesuviusScrollSegmentationTool

./: .gitignore  README.md
algorithm/: .dockerignore  CMakeLists.txt  dockerfile
algorithm/apps/: aw_segmentation_algorithm.cpp  generate_png_renders.cpp  vc_render_tifxyz.cpp
algorithm/include/vc/core/types/: ChunkedTensor.hpp
algorithm/include/vc/core/util/: ABFFlattening.hpp  ChunkCache.hpp  Compositing.hpp  Geometry.hpp  HashFunctions.hpp  LoadJson.hpp  PlaneSurface.hpp  PointIndex.hpp  QuadSurface.hpp  Slicing.hpp  StreamOperators.hpp  Surface.hpp  SurfaceArea.hpp  SurfacePatchIndex.hpp  Tiff.hpp  xtensor_include.hpp
algorithm/src/: aw_segmentation_algorithm.cpp
algorithm/src/vc/core/util/: ABFFlattening.cpp  ChunkCache.cpp  Compositing.cpp  Geometry.cpp  PlaneSurface.cpp  PointIndex.cpp  QuadSurface.cpp  Slicing.cpp  SurfacePatchIndex.cpp  Tiff.cpp
backend/: Dockerfile  README.MD  api_requirements.txt  celery_app.py  config.py
backend/api/: endpoint.py
backend/functions/: send_png.py
backend/workers/: tasks.py
extras/: get_sample_from_OMEZarr.py  get_slices_from_sample.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: endpoints.ts
frontend/src/components/: Directory.tsx  Form.tsx  GrayscaleViewer.tsx  Header.tsx  ImageViewer.tsx  Meta.tsx  RenderViewer.tsx  ScrollViewer.tsx
frontend/src/interfaces/: DirectoryProps.tsx  FormProps.tsx  FormStateProp.tsx  GrayscaleViewerProps.ts  ImageViewerProps.ts  ImageViewerProps.tsx  MetaProps.tsx  RenderViewerProps.tsx  ScrollViewerProps.ts  ScrollViewerProps.tsx
frontend/src/types/: Axis.ts  AxisState.ts  index.ts
